# online-shop

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  online-shop-ci.yaml  test.yml
carts/: cart.py  context_processors.py  urls.py  views.py
carts/tests/: __init__.py  test_cart.py  test_views.py
core/: celery.py  env.py  settings.py  tasks.py  urls.py
customer_addresses/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
customer_addresses/migrations/: 0001_initial.py  0002_customeraddress_customer.py
customer_addresses/tests/: test_factories.py  test_forms.py  test_views.py
customers/: admin.py  factories.py  forms.py  models.py  tokens.py  urls.py  views.py
customers/migrations/: 0001_initial.py  (+5 more)
dashboard/: apps.py  forms.py  urls.py  views.py
management_panel/: apps.py  filters.py  urls.py  views.py
newsletter/: admin.py  factories.py  forms.py  models.py  tasks.py  tokens.py  urls.py  views.py
orders/: admin.py  context_processors.py  factories.py  filters.py  models.py  urls.py  views.py
payments/: factories.py  models.py  stripe_payment_provider.py  urls.py  views.py
product_reviews/: admin.py  context_processors.py  factories.py  forms.py  models.py
products/: admin.py  context_processors.py  factories.py  filters.py  models.py  urls.py  views.py
wishlist/: admin.py  context_processors.py  factories.py  models.py  urls.py  views.py
(+141 files in other folders)
